# Week-2-Project-Files

./: README.md
my_project_week2/: Makefile  Terminal Output (Partly).txt  example.py  pyproject.toml
my_project_week2/RMD/: README.md
my_project_week2/scripts/: prep_data.sh
